@@ -3,6 +3,7 @@
 - fix mistake in assignment.
 - check for non existent negative entries in lookup_ghost().
 - fix reset flex scan buffer on init.
+- wait for master map available at start.
 
 28/03/2014 autofs-5.0.9
 =======================
